services/abc72/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: abc72
  labels:
    name: abc72
    app: abc72
