services/abc72/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: abc72-service
  namespace: abc72
  labels:
    app: abc72
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
    name: http
  selector:
    app: abc72
